welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
	for (i <- 0 to nums.length-1) {
		while (i=!4) do {
			if(nums(i)==9) {
				return true
			}		
			}
	}
	return false
}

